Fix release date column to right align

--- a/_sass/pages/_releases.scss
+++ b/_sass/pages/_releases.scss
@@ -15,6 +15,13 @@ table.releases {
     background-color: var(--highlight-bg);
   }
 
+  td.release-date {
+    width: 0;
+    text-align: right;
+    padding-right: 0;
+    white-space: nowrap;
+  }
+
   .release-links {
     &:not(:hover) {
       > a {
